--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,7 +1,26 @@
-// @font-face {
-//     font-family: lastica;
-//     src: url(../../fonts/Lastica.ttf);
-// }
+// Oswald font
+@font-face {
+    font-family: Oswald;
+    src: url(../../fonts/Oswald/Oswald-Regular.ttf);
+}
+
+@font-face {
+    font-family: OswaldB;
+    src: url(../../fonts/Oswald/Oswald-Bold.ttf);
+}
+
+
+@font-face {
+    font-family: Nunito;
+    src: url(../../fonts/Nunito/Nunito-Regular.ttf);
+}
+
+
+@font-face {
+    font-family: NunitoB;
+    src: url(../../fonts/Nunito/Nunito-Bold.ttf);
+}
+
 
 // @font-face {
 //     font-family: Interphase;
