--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,4 +1,16 @@
 // Color variables
+$white: #ffffff;
+$gray: #D2D2D2;
+$light-blue: #00C0C7;
+$blue: #4D7ED1;
+$dark-blue: #1349A8;
+$hover-blue: #dde9ff;
+$darkest-blue: #00276B;
+$black: #0D1117;
 
-// transform variables
+
+// Transform variables
 $home-btn: 30%;
+
+// Blur variable
+$home-blur: 8px;
