--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -8,13 +8,18 @@ ul {
     padding: 0;
 
     .left-side {
-        flex-basis: 80%;
+        flex-basis: 70%;
         display: flex;
         align-items: center;
 
         a {
             display: flex;
             align-items: center;
+
+            h1 {
+                margin: 0;
+                font-size: em(30px);
+            }
         }
     }
 
@@ -22,10 +27,13 @@ ul {
         display: flex;
         flex-direction: row-reverse;
         gap: 50px;
-        margin-right: 10px;
+        margin-right: 15px;
+        align-items: center;
+        flex-basis: 30%;
     }
 
     a {
+        font-family: Oswald, Courier, monospace;
 
         &:hover {
             background-color: none;
@@ -39,8 +47,6 @@ ul {
         padding: 10px;
 
         a {
-            // padding: 10px;
-
             &:hover {
                 background-color: none;
                 text-decoration: none;
@@ -51,8 +57,8 @@ ul {
 }
 
 .img-container {
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
     display: flex;
 
     img {
