Added pictures and description for the home page, and fixed SCSS

--- a/src/assets/styles/setup/_variables.scss
+++ b/src/assets/styles/setup/_variables.scss
@@ -1,5 +1,6 @@
 // Color variables
 $white: #ffffff;
+$white-light: #fffafa;
 $gray: #D2D2D2;
 $light-blue: #00C0C7;
 $blue: #4D7ED1;
@@ -10,7 +11,7 @@ $black: #0D1117;
 
 
 // Transform variables
-$home-btn: 30%;
+$home-btn: 0%;
 
 // Blur variable
 $home-blur: 8px;
