--- a/src/assets/styles/views/_HomePage.scss
+++ b/src/assets/styles/views/_HomePage.scss
@@ -1,33 +1,33 @@
 main {
     font-family: Nunito, Courier, monospace;
+    padding: 0 10px;
 
     .intro {
-        padding: 0 10px;
         display: grid;
-        min-height: 85vh;
-        max-height: max-content;
+        max-height: 80vh;
         display: grid;
-        grid-template-columns: 1fr 0.5fr;
+        grid-template-columns: 0.7fr 0.5fr;
         grid-template-rows: 1fr 0.5fr;
         gap: 12px;
+        margin-bottom: 3em;
 
         .pos0 {
-            background-color: aqua;
+            // background-color: $black;
             grid-area: 1 / 1 / 2 / 2;
         }
 
         .pos1 {
-            background-color: aqua;
+            // background-color: $black;
             grid-area: 1 / 2 / 2 / 3;
         }
 
         .pos2 {
-            background-color: lightblue;
+            // background-color: lightblue;
             grid-area: 2 / 1 / 3 / 2;
         }
 
         .pos3 {
-            background-color: lightblue;
+            // background-color: $white;
             grid-area: 2 / 2 / 3 / 3;
         }
     }
@@ -37,10 +37,24 @@ main {
     border-radius: 15px;
     min-height: max-content;
     position: relative;
+    overflow: hidden;
+    border-radius: 20px;
 
     .image-container {
         position: relative;
         z-index: 0;
+        overflow: hidden;
+        object-fit: contain;
+        max-width: auto;
+
+        img {
+            width: 100%;
+            /* make sure the image takes the full width of its container */
+            height: 100%;
+            /* make sure the image takes the full height of its container */
+            object-fit: cover;
+            /* this makes sure your image covers the entire element without being stretched */
+        }
     }
 
     .data-box {
@@ -57,7 +71,7 @@ main {
         flex-direction: column;
         align-items: flex-start;
         justify-content: space-around;
-        padding: 10px;
+        padding: 5px 20px;
         width: 100%;
 
         p {
@@ -68,7 +82,7 @@ main {
         button {
             transform: translateX(-150%);
             transition: transform 0.3s ease, background-color .2s ease, opacity .2s ease;
-            opacity: 0.8;
+            opacity: 0.9;
             pointer-events: auto;
             position: relative;
             z-index: 2;
@@ -103,9 +117,15 @@ main {
         color: $white;
         border: 1px solid $blue !important;
     }
+
+    color: $white;
 }
 
 .box.light-mode {
+    .box {
+        background-color: $black;
+
+    }
 
     button {
         @include btn($white);
