Added footer + changed some darkmode settings

--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -6,6 +6,7 @@ ul {
     align-items: center;
     margin-bottom: 10px;
     padding: 0;
+    font-weight: bold;
 
     .left-side {
         flex-basis: 70%;
