--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -17,5 +17,9 @@
 
 // importing components folder
 @import "./cmps/AppHeader";
+@import "./cmps/AppFooter";
 @import "./cmps/ToggleSwitch";
+@import "./cmps/ScrollMore";
+@import "./cmps/ScrollTop";
+@import "./cmps/ClanExplenation";
 // @import "./cmps/";
