Added image slider

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -22,4 +22,5 @@
 @import "./cmps/ScrollMore";
 @import "./cmps/ScrollTop";
 @import "./cmps/ClanExplenation";
+@import "./cmps/ImageSlider";
 // @import "./cmps/";
