--- a/src/assets/styles/cmps/_ImageSlider.scss
+++ b/src/assets/styles/cmps/_ImageSlider.scss
@@ -1,7 +1,7 @@
 .image-slider-wrapper {
     position: relative;
-    width: 80%;
-    margin: auto;
+    width: 83%;
+    margin: 2em auto;
     padding: 0 50px; // Give some space for the buttons
     margin-bottom: 3em;
 }
