fixed some scss problems

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -23,4 +23,6 @@
 @import "./cmps/ScrollTop";
 @import "./cmps/ClanExplenation";
 @import "./cmps/ImageSlider";
+@import "./cmps/Form";
+@import "./cmps/LoadingSpinner";
 // @import "./cmps/";
