--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -45,6 +45,7 @@ ul {
         list-style: none;
         height: 100%;
         padding: 10px;
+        width: max-content;
 
         a {
             &:hover {
