--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,6 +13,7 @@
 
 // importing views folder
 @import "./views/HomePage";
+@import "./views/AboutPage";
 // @import "./views/";
 
 // importing components folder
