changed some basic scss

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -14,6 +14,7 @@
 // importing views folder
 @import "./views/HomePage";
 @import "./views/AboutPage";
+@import "./views/ApplicationPage";
 // @import "./views/";
 
 // importing components folder
