imported modal.scss

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -26,5 +26,6 @@
 @import "./cmps/ClanExplenation";
 @import "./cmps/ImageSlider";
 @import "./cmps/Form";
+@import "./cmps/Modal";
 @import "./cmps/LoadingSpinner";
 // @import "./cmps/";
