--- a/src/assets/styles/cmps/_Form.scss
+++ b/src/assets/styles/cmps/_Form.scss
@@ -1,4 +1,72 @@
+.container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    flex: 1;
+}
+
+.header-login {
+    margin: 20px 20px 30px;
+}
+
 .form-container {
     display: flex;
     justify-content: space-around;
+    flex: 1;
+    margin: 0 20px;
+
+    button {
+        @include btn($dark-blue);
+        color: $black;
+        border: 1px solid $blue !important;
+    }
+
+    input[type=text],
+    input[type=password],
+    input[type=email],
+    input[type=tel],
+    input[type=number] {
+        @include inpt;
+        margin-bottom: 20px;
+        margin-top: 5px;
+    }
+
+    form {
+        display: flex;
+        flex-direction: column;
+        flex-basis: 30%;
+        justify-content: center;
+        margin-right: 20px;
+
+        .error-message {
+            color: red;
+            font-weight: bold;
+            margin: 10px 0;
+        }
+    }
+
+    .side-display {
+        flex-basis: 70%;
+        display: flex;
+        justify-content: center;
+        /* Center the image vertically and horizontally */
+        align-items: center;
+
+        .image-container {
+            max-width: 100%;
+            /* Ensure the image container doesn't exceed the available width */
+            max-height: 100%;
+            /* Ensure the image container doesn't exceed the available height */
+            overflow: hidden;
+
+            img {
+                width: 100%;
+                height: 100%;
+                /* Occupy the full height of the container */
+                object-fit: cover;
+                /* Maintain aspect ratio and cover the entire container */
+            }
+        }
+    }
 }
