--- a/src/assets/styles/cmps/_Modal.scss
+++ b/src/assets/styles/cmps/_Modal.scss
@@ -9,22 +9,31 @@
     display: flex;
     justify-content: center;
     align-items: center;
-}
 
-.modal-content {
-    background-color: white;
-    padding: 20px;
-    border-radius: 5px;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-    position: relative;
-}
+    .modal-content {
+        background-color: white;
+        width: 30%;
+        height: 40%;
+        padding: 20px;
+        border-radius: 5px;
+        box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
+        position: relative;
+    }
 
-.modal-close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border: none;
-    background-color: transparent;
-    font-size: 18px;
-    cursor: pointer;
+    .modal-close-button {
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        border: none;
+        background-color: transparent;
+        font-size: 18px;
+        cursor: pointer;
+    }
+
+    .modal-children {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
