added the test font

--- a/src/assets/styles/setup/_typography.scss
+++ b/src/assets/styles/setup/_typography.scss
@@ -1,13 +1,23 @@
 // Oswald font
 @font-face {
     font-family: Oswald;
-    src: url(../../fonts/Oswald/Oswald-Regular.ttf);
+    src: url(../../fonts/Heebo/Heebo-Medium.ttf);
 }
 
 @font-face {
     font-family: OswaldB;
-    src: url(../../fonts/Oswald/Oswald-Bold.ttf);
+    src: url(../../fonts/Heebo/Heebo-Bold.ttf);
 }
+
+// @font-face {
+//     font-family: Oswald;
+//     src: url(../../fonts/Oswald/Oswald-Regular.ttf);
+// }
+
+// @font-face {
+//     font-family: OswaldB;
+//     src: url(../../fonts/Oswald/Oswald-Bold.ttf);
+// }
 
 
 @font-face {
