updated scss main file

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -28,4 +28,5 @@
 @import "./cmps/Form";
 @import "./cmps/Modal";
 @import "./cmps/LoadingSpinner";
+@import "./cmps/UserPic";
 // @import "./cmps/";
