fixed logout + signup bug

--- a/src/assets/styles/cmps/_AppHeader.scss
+++ b/src/assets/styles/cmps/_AppHeader.scss
@@ -35,6 +35,7 @@ ul {
 
     a {
         font-family: Oswald, Courier, monospace;
+        cursor: pointer;
 
         &:hover {
             background-color: none;
