--- a/src/assets/styles/cmps/_Form.scss
+++ b/src/assets/styles/cmps/_Form.scss
@@ -7,18 +7,18 @@
 }
 
 .header-login {
-    margin: 20px 20px 30px;
+    margin: 0 0 6px 0;
 }
 
 .form-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
     flex: 1;
     margin: 0 20px;
 
     button {
         @include btn($dark-blue);
-        color: $black;
+        // color: $black;
         border: 1px solid $blue !important;
     }
 
@@ -28,26 +28,56 @@
     input[type=tel],
     input[type=number] {
         @include inpt;
+        width: 100%;
+        box-sizing: border-box;
         margin-bottom: 20px;
         margin-top: 5px;
+    }
+
+    .password-container {
+        position: relative;
+    }
+
+    .password-container input {
+        position: relative; // set input as relative
+        width: 100%;
+        padding-right: 30px; // Space for the eye icon
+        z-index: 1; // This ensures the input is over the icon so it can still be clickable
+    }
+
+    .password-container span {
+        position: absolute;
+        right: 10px;
+        top: 45%;
+        transform: translateY(-50%);
+        cursor: pointer;
+        z-index: 2; // This ensures the icon is over the input
     }
 
     form {
         display: flex;
         flex-direction: column;
-        flex-basis: 30%;
+        flex-basis: 50%;
         justify-content: center;
         margin-right: 20px;
 
         .error-message {
+            font-family: OswaldB;
             color: red;
             font-weight: bold;
             margin: 10px 0;
+            text-align: center;
+        }
+
+        .login-tools {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 15px;
         }
     }
 
     .side-display {
-        flex-basis: 70%;
+        flex-basis: 50%;
         display: flex;
         justify-content: center;
         /* Center the image vertically and horizontally */
