--- a/src/assets/styles/views/_ApplicationPage.scss
+++ b/src/assets/styles/views/_ApplicationPage.scss
@@ -1,6 +1,49 @@
-.application {
-    // margin: 0 auto;
+.application-container {
+    height: 80vh;
     display: flex;
-    justify-content: center;
-    height: 100%;
+    justify-content: space-around;
+    // flex: 1;
+    // min-height: 30vh;
+    padding: 0 20px;
+    overflow-y: auto;
+    background-color: $blue;
+    // display: flex;
+
+    .application {
+        margin-top: 10px;
+        padding: 15px 100px 0;
+        background-color: $white;
+        // margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        height: 100%;
+        flex-direction: column;
+        margin: 20px;
+        height: 100vh;
+
+        .answer-container {
+            display: flex;
+            flex-direction: column;
+        }
+
+        input[type=text],
+        input[type=password],
+        input[type=email],
+        input[type=tel],
+        input[type=number] {
+            @include inpt;
+            margin-bottom: 10px;
+            margin-top: 10px;
+        }
+
+        input[type=radio] {
+            margin-bottom: 10px;
+            @include radioBtn;
+        }
+
+        button {
+            margin: 30px 0;
+            @include btn($dark-blue)
+        }
+    }
 }
